kubernetes/fluxcd/apps/base/qbittorrent/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.kube-01.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 10095
    - match: Host(`qbittorrent.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: qbittorrent
          port: 10095
  tls:
    secretName: certificate-secret
