kubernetes/fluxcd/apps/base/qbittorrent/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: qbittorrent
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 10095
